[package]
name = "log"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
crypto = { path = "../crypto" }
wire = { path = "../wire" }
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
