[package]
name = "portmap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
getrandom = "0.2"
thiserror.workspace = true
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "time", "macros"] }

[dev-dependencies]
proptest.workspace = true
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "time", "macros", "test-util"] }
