[package]
name = "puncher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "time", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "time", "macros", "test-util"] }
