[package]
name = "swarm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
wire = { path = "../wire" }
crypto = { path = "../crypto" }
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[[example]]
name = "dht_sim"

[[example]]
name = "punch_sim"

[[example]]
name = "nat_sim"

[[example]]
name = "connect_sim"
