[package]
name = "sync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
crypto = { path = "../crypto" }
wire = { path = "../wire" }
feed = { path = "../feed" }
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
