[package]
name = "transfer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
crypto = { path = "../crypto" }
feed = { path = "../feed" }
blob = { path = "../blob" }
sync = { path = "../sync" }
driver = { path = "../driver" }
wire = { path = "../wire" }
tokio = { version = "1", features = ["time", "rt", "sync"] }
thiserror.workspace = true

[dev-dependencies]
swarm = { path = "../swarm" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "time", "macros", "sync"] }

[[example]]
name = "stream"
