[package]
name = "transfer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
crypto = { path = "../crypto" }
feed = { path = "../feed" }
blob = { path = "../blob" }
sync = { path = "../sync" }
driver = { path = "../driver" }
swarm = { path = "../swarm" }
wire = { path = "../wire" }
tokio = { version = "1", features = ["time", "rt", "sync"] }
# Noise XX handshake + AEAD transport for the punched channel (NoiseLink). The
# stateless transport mode lets us carry an explicit per-datagram nonce so the
# cipher survives the unreliable, reorder-prone UDP channel.
snow = "0.10"
thiserror.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "time", "macros", "sync"] }

[[example]]
name = "stream"
