[package]
name = "warren"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
crypto = { path = "../crypto" }
swarm = { path = "../swarm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
