[package]
name = "warren"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
crypto = { path = "../crypto" }
swarm = { path = "../swarm" }
driver = { path = "../driver" }
transfer = { path = "../transfer" }
feed = { path = "../feed" }
feed-redb = { path = "../feed-redb" }
blob = { path = "../blob" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Only the async Mutex — the session is runtime-agnostic (the app drives it with
# its own executor); no `rt` feature here.
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
